LPS-61067 lang keys

--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ca.properties
@@ -1,3 +1,4 @@
+choose-a-site=Triar un lloc (Automatic Translation)
 go-to-other-site=Anar a altre lloc (Automatic Translation)
 go-to-site=Aneu al lloc (Automatic Translation)
 manage-sites=Gestionar llocs (Automatic Translation)
