--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_uk.properties
@@ -1,3 +1,4 @@
+choose-a-site=Виберіть сайт (Automatic Translation)
 go-to-other-site=Перейдіть на інший сайт (Automatic Translation)
 go-to-site=Зайдіть на сайт (Automatic Translation)
 manage-sites=Керування сайтами (Automatic Translation)
