--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ar.properties
@@ -1,3 +1,4 @@
+choose-a-site=اختيار موقع (Automatic Translation)
 go-to-other-site=انتقل إلى موقع آخر (Automatic Translation)
 go-to-site=انتقل إلى موقع (Automatic Translation)
 manage-sites=إدارة المواقع (Automatic Translation)
