--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_cs.properties
@@ -1,3 +1,4 @@
+choose-a-site=Zvolte Web (Automatic Translation)
 go-to-other-site=Přejít na jiné stránky (Automatic Translation)
 go-to-site=Přejít na web (Automatic Translation)
 manage-sites=Spravovat weby (Automatic Translation)
