--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_el.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_el.properties
@@ -1,3 +1,4 @@
+choose-a-site=Επιλέξτε μια τοποθεσία (Automatic Translation)
 go-to-other-site=Μεταβείτε σε άλλη τοποθεσία (Automatic Translation)
 go-to-site=Μεταβείτε στην τοποθεσία (Automatic Translation)
 manage-sites=Διαχειριστείτε τοποθεσίες (Automatic Translation)
