--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_es.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_es.properties
@@ -1,3 +1,4 @@
+choose-a-site=Elegir un sitio (Automatic Translation)
 go-to-other-site=Ir a otro sitio (Automatic Translation)
 go-to-site=Ir al sitio (Automatic Translation)
 manage-sites=Administrar sitios (Automatic Translation)
