--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_et.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_et.properties
@@ -1,3 +1,4 @@
+choose-a-site=Valige esmalt sait (Automatic Translation)
 go-to-other-site=Lähen muu saidil (Automatic Translation)
 go-to-site=Mine saidi (Automatic Translation)
 manage-sites=Saitide haldamine (Automatic Translation)
