--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fa.properties
@@ -1,3 +1,4 @@
+choose-a-site=انتخاب سایت (Automatic Translation)
 go-to-other-site=برو به سایت دیگر (Automatic Translation)
 go-to-site=برو به سایت (Automatic Translation)
 manage-sites=مدیریت سایت (Automatic Translation)
