--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fi.properties
@@ -1,3 +1,4 @@
+choose-a-site=Valitse sivusto (Automatic Translation)
 go-to-other-site=Muut sivustossa (Automatic Translation)
 go-to-site=Siirry sivustoon (Automatic Translation)
 manage-sites=Sivustojen hallinta (Automatic Translation)
