--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_fr.properties
@@ -1,3 +1,4 @@
+choose-a-site=Choisir un Site (Automatic Translation)
 go-to-other-site=Allez sur autre Site (Automatic Translation)
 go-to-site=Accédez au Site (Automatic Translation)
 manage-sites=Gérer des Sites (Automatic Translation)
