--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_hu.properties
@@ -1,3 +1,4 @@
+choose-a-site=Válasszon egy helyet (Automatic Translation)
 go-to-other-site=Látogasson el más (Automatic Translation)
 go-to-site=Látogasson el (Automatic Translation)
 manage-sites=Webhelyek kezelése (Automatic Translation)
