--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_iw.properties
@@ -1,3 +1,4 @@
+choose-a-site=לבחור אתר (Automatic Translation)
 go-to-other-site=לכו לאתר אחר (Automatic Translation)
 go-to-site=עבור לאתר (Automatic Translation)
 manage-sites=ניהול אתרים (Automatic Translation)
