--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ja.properties
@@ -1,3 +1,4 @@
+choose-a-site=サイトを選択します。 (Automatic Translation)
 go-to-other-site=他のサイトへ行く (Automatic Translation)
 go-to-site=サイトに行く (Automatic Translation)
 manage-sites=サイトを管理します。 (Automatic Translation)
