--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_nb.properties
@@ -1,3 +1,4 @@
+choose-a-site=Velg et område (Automatic Translation)
 go-to-other-site=Gå til andre nettsted (Automatic Translation)
 go-to-site=Gå til webområdet (Automatic Translation)
 manage-sites=Administrere områder (Automatic Translation)
