--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_nl_BE.properties
@@ -1,3 +1,4 @@
+choose-a-site=Kies een Site (Automatic Translation)
 go-to-other-site=Ga naar de andere Site (Automatic Translation)
 go-to-site=Ga naar Site (Automatic Translation)
 manage-sites=Sites beheren (Automatic Translation)
