--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_pl.properties
@@ -1,3 +1,4 @@
+choose-a-site=Wybierz witrynę (Automatic Translation)
 go-to-other-site=Przejdź do innej strony (Automatic Translation)
 go-to-site=Przejdź do witryny (Automatic Translation)
 manage-sites=Zarządzanie witrynami (Automatic Translation)
