--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_pt_PT.properties
@@ -1,3 +1,4 @@
+choose-a-site=Escolha um Site (Automatic Translation)
 go-to-other-site=Ir para outro Site (Automatic Translation)
 go-to-site=Ir para o Site (Automatic Translation)
 manage-sites=Gerenciar Sites (Automatic Translation)
