--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ro.properties
@@ -1,3 +1,4 @@
+choose-a-site=Alege un Site (Automatic Translation)
 go-to-other-site=Du-te la alt Site (Automatic Translation)
 go-to-site=Du-te la site-ul (Automatic Translation)
 manage-sites=Gestiona site-uri (Automatic Translation)
