--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_ru.properties
@@ -1,3 +1,4 @@
+choose-a-site=Выбрать сайт (Automatic Translation)
 go-to-other-site=Перейти на другой сайт (Automatic Translation)
 go-to-site=Перейти на сайт (Automatic Translation)
 manage-sites=Управление сайтами (Automatic Translation)
