--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_sl.properties
@@ -1,3 +1,4 @@
+choose-a-site=Izberite mesto (Automatic Translation)
 go-to-other-site=Pojdite na drugo stran (Automatic Translation)
 go-to-site=Pojdi na stran (Automatic Translation)
 manage-sites=Upravljanju območij (Automatic Translation)
