--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_sr_RS.properties
@@ -1,3 +1,4 @@
+choose-a-site=Choose a Site (Automatic Copy)
 go-to-other-site=Go to Other Site (Automatic Copy)
 go-to-site=Go to Site (Automatic Copy)
 manage-sites=Manage Sites (Automatic Copy)
