--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_tr.properties
@@ -1,3 +1,4 @@
+choose-a-site=Bir yeri tercih ediyor. (Automatic Translation)
 go-to-other-site=Diğer siteye gidin (Automatic Translation)
 go-to-site=Sitesine gidin (Automatic Translation)
 manage-sites=Siteleri Yönet (Automatic Translation)
