--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language_zh_CN.properties
@@ -1,3 +1,4 @@
+choose-a-site=选择一个站点 (Automatic Translation)
 go-to-other-site=转到其他网站 (Automatic Translation)
 go-to-site=转到站点 (Automatic Translation)
 manage-sites=管理网站 (Automatic Translation)
