--- a/portal-impl/src/content/Language_pl.properties
+++ b/portal-impl/src/content/Language_pl.properties
@@ -3328,6 +3328,7 @@ please-contact-the-administrator-to-setup-this-portlet=Skontaktuj się z adminis
 please-email-all-questions-to=Wszelkie pytania proszę przesyłać do {0}.
 please-ensure-the-administrator-has-configured-a-proper-google-license=Upewnij się, że administrator skonfigurował poprawną licencję Google.
 please-enter-a-download-page-url-or-a-direct-download-url=Wprowadź URL strony pobierania lub bezpośredni URL do pobrania.
+please-enter-a-file-with-a-valid-extension-x=Please enter a file with a valid extension ({0}).
 please-enter-a-file-with-a-valid-file-name=Wprowadź plik o poprawnej nazwie.
 please-enter-a-file-with-a-valid-file-size-no-larger-than-x=Please enter a file with a valid file size no larger than {0}.
 please-enter-a-file-with-a-valid-file-type=Wprowadź plik poprawnego typu.
